# Classification_image_texte_et_deploiement

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: image_model_config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
final_project/: __init__.py  dataset.py  features.py  plots.py
final_project/modeling/: predict.py  train.py
models/image_classifier_model/: class_names.json
models/text_classifier_hugging_face_model/: metadata.json
results/checkpoint-15000/: trainer_state.json
results/checkpoint-22500/: config.json  trainer_state.json
results/checkpoint-7500/: trainer_state.json
results/metrics/: image_classifier_evaluation_metrics.json  text_classifier_hugging_face_model_evaluation_metrics.json
results/reports/: image_dataset_exploration_report.txt
scripts/: check_download_status.py  download_data.py  explore_dataset.py  train_image_model.py
src/api/: main.py
src/models/: image_classifier.py
src/training/: evaluate_image_classifier.py  image_classifier.py  text_classifier_hugging_face.py
